--- a/report.ipynb
+++ b/report.ipynb
@@ -84,7 +84,7 @@
     "Below you can see how our analysis results in slightly different graphs than the ones presented in the original paper. \n",
     "\n",
     "On the top you can see the results for the win/loss waveforms of the original paper, on the bottom are our results.\n",
-    "The difference is not that much, however still present.\n",
+    "The difference is not that much, however, still present.\n",
     "\n",
     "![compared_3a_final.png](attachment:0ceb7e6e-c261-4a01-8624-090d96320e5a.png)\n",
     "\n",
